[gd_scene load_steps=14 format=3 uid="uid://11ledbvampsh"]

[ext_resource type="PackedScene" uid="uid://eyn6sv64g52x" path="res://Scenes/Unit/unit.tscn" id="1_oordr"]
[ext_resource type="Texture2D" uid="uid://njr81wbk04he" path="res://Sprites/tiny_dungeon.png" id="2_56o7u"]
[ext_resource type="Script" uid="uid://cymc3ui8i37h" path="res://Scenes/Unit/Villager/villager.gd" id="2_oordr"]
[ext_resource type="Texture2D" uid="uid://36wr0fpvuj5r" path="res://Sprites/Shadow.png" id="4_7ykpu"]
[ext_resource type="Texture2D" uid="uid://dcu0vuh4lc8lb" path="res://Sprites/tiny_town.png" id="4_cytox"]
[ext_resource type="Shader" uid="uid://cj3jrl2inhwpv" path="res://Resources/Outline/outline_shader.gdshader" id="5_2534k"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ykpu"]
shader = ExtResource("5_2534k")
shader_parameter/width = 1
shader_parameter/outline_color = Color(1, 1, 1, 1)
shader_parameter/flickering_speed = 0.0
shader_parameter/minimal_flickering_alpha = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cytox"]
radius = 17.0

[sub_resource type="Animation" id="Animation_7ykpu"]
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/TreeWeapon:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/TreeWeapon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/TreeWeapon:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visuals/TreeWeapon:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Visuals/RockWeapon:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Visuals/AttackWeapon:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_cytox"]
resource_name = "chop"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.2617993877991494, 0.2617993877991494, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.3), Vector2(1.3, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/TreeWeapon:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/TreeWeapon:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, -12)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Visuals/TreeWeapon:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.15, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.3996803987067011, 0.5235987755982988]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Visuals/TreeWeapon:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"trigger_chop_event"
}]
}

[sub_resource type="Animation" id="Animation_wo5pv"]
resource_name = "idle"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1), Vector2(1, 1), Vector2(0.8, 1)]
}

[sub_resource type="Animation" id="Animation_2534k"]
resource_name = "move"
length = 0.9
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -10), Vector2(0, -8), Vector2(0, -10), Vector2(0, -8)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.2617993877991494, 0.2617993877991494, -0.2617993877991494]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 0.9), Vector2(0.8, 1.1), Vector2(1.1, 0.9), Vector2(0.8, 1.1), Vector2(1.1, 0.9)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/TreeWeapon:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cytox"]
_data = {
&"RESET": SubResource("Animation_7ykpu"),
&"chop": SubResource("Animation_cytox"),
&"idle": SubResource("Animation_wo5pv"),
&"move": SubResource("Animation_2534k")
}

[node name="Villager" instance=ExtResource("1_oordr")]
script = ExtResource("2_oordr")
move_speed = 50.0
collect_time = 3.0

[node name="Sprite" parent="Visuals" index="0"]
z_index = 2
texture = ExtResource("2_56o7u")

[node name="Shadow" parent="Visuals" index="1"]
modulate = Color(1, 1, 1, 0.43137255)
position = Vector2(5.9604645e-07, 0)
scale = Vector2(1.2499999, 1)
texture = ExtResource("4_7ykpu")

[node name="TreeWeapon" type="Sprite2D" parent="Visuals" index="2"]
unique_name_in_owner = true
visible = false
z_index = 2
texture = ExtResource("4_cytox")
flip_h = true
region_enabled = true
region_rect = Rect2(112, 160, 16, 16)

[node name="RockWeapon" type="Sprite2D" parent="Visuals" index="3"]
unique_name_in_owner = true
visible = false
z_index = 2
texture = ExtResource("4_cytox")
flip_h = true
region_enabled = true
region_rect = Rect2(112, 144, 16, 16)

[node name="AttackWeapon" type="Sprite2D" parent="Visuals" index="4"]
unique_name_in_owner = true
visible = false
z_index = 2
texture = ExtResource("4_cytox")
flip_h = true
region_enabled = true
region_rect = Rect2(128, 144, 16, 16)

[node name="CollectItem" type="Sprite2D" parent="Visuals" index="5"]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_7ykpu")
position = Vector2(0, -25)
texture = ExtResource("4_cytox")
region_enabled = true
region_rect = Rect2(146, 112, 12, 16)

[node name="DetectorArea" type="Area2D" parent="." index="1"]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectorArea" index="0"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_cytox")

[node name="HealthBar" parent="." index="3"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
libraries = {
&"": SubResource("AnimationLibrary_cytox")
}
autoplay = "idle"

[node name="CollectTimer" type="Timer" parent="." index="5"]
one_shot = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="6"]

[connection signal="area_entered" from="DetectorArea" to="." method="_on_detector_area_area_entered"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_collect_timer_timeout"]
